[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://GameOver.tscn" type="PackedScene" id=4]
[ext_resource path="res://VCR_OSD_MONO.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Label.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=2]
border_width_left = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=4]
size = 60
outline_size = 5
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 80
font_data = ExtResource( 5 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Rooms" type="Node2D" parent="."]

[node name="PlayerLeft" parent="." instance=ExtResource( 1 )]
position = Vector2( 320, 360 )

[node name="PlayerRight" parent="." instance=ExtResource( 1 )]
position = Vector2( 960, 360 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 1, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="GameOver" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Stats" type="Label" parent="."]
margin_left = 515.0
margin_right = 765.0
margin_bottom = 69.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
text = "POINTS: 17000
LEVEL: 5"
align = 1
script = ExtResource( 6 )

[node name="InfoScreen" type="Label" parent="."]
visible = false
margin_right = 1282.0
margin_bottom = 720.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "DAMAGE BOOST !!!"
align = 1
valign = 1

[node name="StartGame" type="Button" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="Label" type="Label" parent="StartGame"]
margin_right = 1280.0
margin_bottom = 720.0
custom_fonts/font = SubResource( 5 )
text = "START GAME"
align = 1
valign = 1

[connection signal="died" from="PlayerLeft" to="." method="_on_PlayerLeft_died"]
[connection signal="died" from="PlayerRight" to="." method="_on_PlayerRight_died"]
[connection signal="pressed" from="StartGame" to="." method="_on_StartGame_pressed"]
